tests/rosetta/out/Fortran/bitcoin-address-validation.error
gfortran: exit status 1
/tmp/bitcoin-address-validation.f90:49:18:

   49 |         res = (//)
      |                  1
Error: Empty array constructor at (1) is not allowed
/tmp/bitcoin-address-validation.f90:60:18:

   60 |         res = (//)
      |                  1
Error: Empty array constructor at (1) is not allowed
/tmp/bitcoin-address-validation.f90:76:28:

   76 |     hash = doubleSHA256(a(1:21))
      |                            1
Error: Syntax error in argument list at (1)
/tmp/bitcoin-address-validation.f90:94:36:

   94 |       if ((a((((21 + i))+1)) /= sum(((i)+1)))) then
      |                                    1
Error: Expected a right parenthesis in expression at (1)
/tmp/bitcoin-address-validation.f90:97:9:

   97 |       end if
      |         1
Error: Expecting END DO statement at (1)
/tmp/bitcoin-address-validation.f90:46:8:

   46 |       ch = addr((idx)+1:(idx + 1))
      |        1
Error: Symbol ‘ch’ at (1) has no IMPLICIT type
/tmp/bitcoin-address-validation.f90:45:26:

   45 |     do while ((idx < size(addr)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitcoin-address-validation.f90:65:4:

   65 |     res = a
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/bitcoin-address-validation.f90:91:26:

   91 |     sum = computeChecksum(a)
      |                          1
Error: Rank mismatch in argument ‘a’ at (1) (scalar and rank-1)
/tmp/bitcoin-address-validation.f90:70:12:

   70 |     first = sha256(bs)
      |            1
Error: Function ‘sha256’ at (1) has no IMPLICIT type; did you mean ‘doublesha256’?
/tmp/bitcoin-address-validation.f90:71:10:

   71 |     res = sha256(first)
      |          1
Error: Function ‘sha256’ at (1) has no IMPLICIT type; did you mean ‘doublesha256’?
/tmp/bitcoin-address-validation.f90:25:24:

   25 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitcoin-address-validation.f90:15:28:

   15 |   write(s0,'(G0)') validA58('1AGNa15ZQXAZUgFiqJ3i7Z2DPU2J6hW62i')
      |                            1
Warning: Character length of actual argument shorter than of dummy argument ‘addr’ (34/100) at (1)
/tmp/bitcoin-address-validation.f90:17:28:

   17 |   write(s1,'(G0)') validA58('17NdbrSGoUotzeGCcMMCqnFkEvLymoou9j')
      |                            1
Warning: Character length of actual argument shorter than of dummy argument ‘addr’ (34/100) at (1)
