tests/rosetta/out/Fortran/bitcoin-address-validation.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program bitcoin_address_validation
  implicit none
  character(len=100) :: s0
  character(len=100) :: s1
    integer :: i
    character(len=100) :: tmpl
    integer, allocatable, dimension(:) :: a
    integer :: idx
    integer :: c
    integer :: j
    integer :: first
    integer :: hash
    integer :: sum
  write(s0,'(G0)') validA58('1AGNa15ZQXAZUgFiqJ3i7Z2DPU2J6hW62i')
  print *, s0
  write(s1,'(G0)') validA58('17NdbrSGoUotzeGCcMMCqnFkEvLymoou9j')
  print *, s1
  
  contains
  recursive integer function indexOf(s,ch) result(res)
    character(len=100), intent(in) :: s
    character(len=100), intent(in) :: ch
    i = 0
    do while ((i < size(s)))
      if ((s((i)+1:(i + 1)) == ch)) then
        res = i
        return
      end if
      i = (i + 1)
    end do
    res = -1
    return
  end function indexOf
  recursive integer function set58(addr) result(res)
    character(len=100), intent(in) :: addr
    tmpl = '123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz'
    allocate(a(0))
    i = 0
    do while ((i < 25))
      a = (/0/)
      i = (i + 1)
    end do
    idx = 0
    do while ((idx < size(addr)))
      ch = addr((idx)+1:(idx + 1))
      c = indexOf(tmpl,ch)
      if ((c < 0)) then
        res = (//)
        return
      end if
      j = 24
      do while ((j >= 0))
        c = ((c + 58) * a(((j)+1)))
        a(((j)+1)) = mod(c,256)
        c = int(((c / 256)))
        j = (j - 1)
      end do
      if ((c > 0)) then
        res = (//)
        return
      end if
      idx = (idx + 1)
    end do
    res = a
    return
  end function set58
  recursive integer function doubleSHA256(bs) result(res)
    integer, intent(in) :: bs
    first = sha256(bs)
    res = sha256(first)
    return
  end function doubleSHA256
  recursive integer function computeChecksum(a) result(res)
    integer, intent(in) :: a
    hash = doubleSHA256(a(1:21))
    res = hash(1:4)
    return
  end function computeChecksum
  recursive logical function validA58(addr) result(res)
    character(len=100), intent(in) :: addr
    a = set58(addr)
    if ((size(a) /= 25)) then
      res = .false.
      return
    end if
    if ((a(((0)+1)) /= 0)) then
      res = .false.
      return
    end if
    sum = computeChecksum(a)
    i = 0
    do while ((i < 4))
      if ((a((((21 + i))+1)) /= sum(((i)+1)))) then
        res = .false.
        return
      end if
      i = (i + 1)
    end do
    res = .true.
    return
  end function validA58
end program bitcoin_address_validation
